     Defaults option is set and a non-existent uid is specified via -u.

Sudo 1.6.8 released.

540) Now find the command base and fill in struct stat earlier.

541) sudoedit now re-opens the temp file as the invoking user.

542) struct timespec is used throughout the code base.

543) Added --with-ldap-conf-file option to override /etc/ldap.conf

544) Added SSL tls_* certificate checking options when using LDAP.

545) Sudoedit will now only attempt to edit regular files or links.

546) Sudo now uses futime() or futimes() where possible.

547) Updated sample.pam to a current version.

548) Better detection of unchanged files in sudoedit.

Sudo 1.6.8p1 released.

549) Bash exported functions are now stripped from the environment passed
     to the program to be executed.

Sudo 1.6.8p2 released.

550) The CDPATH variable is now stripped from the environment passed
     to the program to be executed.

551) Fix temp file generation on systems where the _PATH_VARTMP macro
     lacks a trailing slash.

Sudo 1.6.8p3 released.

552) The KRB5CCNAME environment variable is preserved during sudo
     execution for password lookups that use GSSAPI.

Sudo 1.6.8p4 released.

553) Added a configure check for systems with a 2-argument version of
     timespecsub (like BSD/OS).

554) Added stub struct defintions to sudo.h to quiet compiler warnings
     on some systems.

555) In sudoers Defaults lines, tuples like "lecture" may now be used
     without a value, restoring their old boolean-like nature.

556) Invalid values for a tuple are now handled correctly.

Sudo 1.6.8p5 released.

557) Added a set of missing braces needed for MacOS X / Darwin.

558) Define LDAP_OPT_SUCCESS for those without it.

Sudo 1.6.8p6 released.

559) Warn if the user tries to use the -u option when not running a command.

560) Better PAM error handling and messages.

561) Fixed setting of $USER when env_reset is enabled.

Sudo 1.6.8p7 released.